add catalog name changer
